@@ -558,9 +558,9 @@ if (!function_exists('geodir_create_tables')) {
 			`status` VARCHAR( 100 ) NOT NULL,
 			`post_status` INT(11) DEFAULT NULL,
 			`post_date` DATETIME NOT NULL,
-			`post_city` varchar(30) NULL DEFAULT NULL,
-			`post_region` varchar(30) NULL DEFAULT NULL,
-			`post_country` varchar(30) NULL DEFAULT NULL,
+			`post_city` varchar(50) NULL DEFAULT NULL,
+			`post_region` varchar(50) NULL DEFAULT NULL,
+			`post_country` varchar(50) NULL DEFAULT NULL,
 			`post_latitude` varchar(20) NULL DEFAULT NULL,
 			`post_longitude` varchar(20) NULL DEFAULT NULL,
 			`comment_content` TEXT NULL DEFAULT NULL,
