@@ -87,7 +87,7 @@ echo apply_filters('geodir_search_form_class', 'geodir-listing-search'); ?>"
 
                 <input class="search_text" name="s"
                        value="<?php if (isset($_REQUEST['s']) && trim($_REQUEST['s']) != '') {
-                           echo $_REQUEST['s'];
+                           echo esc_attr($_REQUEST['s']);
                        } else {
                            echo $default_search_for_text;
                        } ?>" type="text"
@@ -98,7 +98,7 @@ echo apply_filters('geodir_search_form_class', 'geodir-listing-search'); ?>"
 
                 <?php
                 if (isset($_REQUEST['snear']) && $_REQUEST['snear'] != '') {
-                    $near = stripslashes($_REQUEST['snear']);
+                    $near = esc_attr(stripslashes($_REQUEST['snear']));
                 } else {
                     $near = $default_near_text;
                 }
